<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_width="150dp">

    <ImageView
        android:id="@+id/ready_card_profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/player_profile_image"
        android:elevation="3dp"
        android:foregroundGravity="top"
        android:src="@drawable/ic_account"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ready_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ready_card_user_name"
        style="@style/mediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:elevation="3dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ready_card_profile_image"
        tools:text="User name" />

    <CheckBox
        android:id="@+id/ready_card_ready_check"
        style="@style/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/ready_check_button"
        android:clickable="false"
        android:elevation="3dp"

        android:focusable="false"
        android:text="@string/ready"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ready_card_user_name" />

    <CheckBox
        android:id="@+id/ready_card_gps"
        style="@style/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:button="@drawable/ic_gps_stateful"
        android:buttonTint="@color/ready_check_button"
        android:clickable="false"
        android:drawablePadding="4dp"
        android:elevation="3dp"
        android:maxLines="1"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ready_card_ready_check" />

    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ready_card_gps" />


</androidx.constraintlayout.widget.ConstraintLayout>